--- a/config/ingestors.yml
+++ b/config/ingestors.yml
@@ -14,7 +14,8 @@ development:
         defaults:
           shop_name: Audio Connection
           shop_address: 
-          shop_suburb: Leichardt
+          shop_suburb: Leichhardt
+          shop_city: Sydney
           shop_state: NSW
           shop_country: Australia
 production:
@@ -27,7 +28,8 @@ production:
         defaults:
           shop_name: Audio Connection
           shop_address: 
-          shop_suburb: Leichardt
+          shop_suburb: Leichhardt
+          shop_city: Sydney
           shop_state: NSW
           shop_country: Australia
 
