--- a/config/ingestors.yml
+++ b/config/ingestors.yml
@@ -52,18 +52,18 @@ development:
           shop_state: State
           shop_country: Australia  
 
-  hifijunction:
+  caxton:
     ingestor: yql_opendatatable
     params:
-      url: http://www.hifibuys.com.au/opendatatables/hifijunction-yql.xml
+      url: http://www.hifibuys.com.au/opendatatables/caxton-audio-yql.xml
       container:
         object: Item
         defaults:
-          shop_name: Audio Connection
+          shop_name: Caxton Audio
           shop_address: 
-          shop_suburb: Leichhardt
-          shop_city: Sydney
-          shop_state: NSW
+          shop_suburb: Paddington
+          shop_city: Brisbane
+          shop_state: QLD
           shop_country: Australia
 
 production:
