correcting the git pth

--- a/config/moonshine.yml
+++ b/config/moonshine.yml
@@ -8,7 +8,7 @@
 #  - assets1.yourapp.com
 #  - assets2.yourapp.com
 :scm: git
-:repository: git@github.com:quannum/hifibuys.git
+:repository: git@github.com:robsharp/hifibuys.git
 # Use :app_symlinks to setup directories under public/ that you want to persist
 # across deployments. They'll be symlinked to the shared directory.
 #:app_symlinks:
