--- a/config/gems.yml
+++ b/config/gems.yml
@@ -1,10 +1,20 @@
 --- 
+- :name: hpricot
 - :name: mislav-will_paginate
   :source: http://gems.github.com
 - :name: brianmario-yajl-ruby
   :source: http://gems.github.com
 - :name: rubaidh-google_analytics
   :source: http://gems.github.com
+- :name: oauth
+- :name: hashie
+- :version: = 0.0.3
+  :name: mash
+- :version: = 0.4.3
+  :name: httparty
+- :name: jnunemaker-twitter
+  :source: http://gems.github.com
+- :name: builder
 - :name: mysql
 - :version: 2.3.4
   :name: rails
