Bringing RESTful stuff and admin interface into the core

--- a/spec/fixtures/items.yml
+++ b/spec/fixtures/items.yml
@@ -3,11 +3,21 @@
 one:
   name: MyString
   description: MyText
-  price: 1
+  price: MyString
   url: MyString
+  shop_name: MyString
+  shop_address: MyString
+  shop_suburb: MyString
+  shop_state: MyString
+  shop_country: MyString
 
 two:
   name: MyString
   description: MyText
-  price: 1
+  price: MyString
   url: MyString
+  shop_name: MyString
+  shop_address: MyString
+  shop_suburb: MyString
+  shop_state: MyString
+  shop_country: MyString
