--- a/config/gems.yml
+++ b/config/gems.yml
@@ -1,7 +1,8 @@
 --- 
 - :name: hpricot
-- :name: mislav-will_paginate
-  :source: http://gems.github.com
+- :version: ~> 2.3.11
+  :name: will_paginate
+  :source: http://gemcutter.org
 - :name: brianmario-yajl-ruby
   :source: http://gems.github.com
 - :name: rubaidh-google_analytics
@@ -16,5 +17,9 @@
   :source: http://gems.github.com
 - :name: builder
 - :name: mysql
+- :name: acts-as-taggable-on
+  :source: http://gemcutter.org
+- :version: ">= 2.0.4"
+  :name: ruby-openid
 - :version: 2.3.4
   :name: rails
