--- a/config/database.yml
+++ b/config/database.yml
@@ -37,6 +37,16 @@ test: &TEST
   password:
   host: localhost
 
+staging:
+  adapter: mysql
+  encoding: utf8
+  reconnect: false
+  database: hifibuys_staging
+  pool: 5
+  username: root
+  password: 
+  host: localhost
+
 production:
   adapter: mysql
   encoding: utf8
