--- a/config/gems.yml
+++ b/config/gems.yml
@@ -19,6 +19,8 @@
 - :name: mysql
 - :name: acts-as-taggable-on
   :source: http://gemcutter.org
+- :version: = 1.3.11
+  :name: thinking-sphinx
 - :version: ">= 2.0.4"
   :name: ruby-openid
 - :version: 2.3.4
