--- a/config/open_shopper.yml
+++ b/config/open_shopper.yml
@@ -1,7 +1,7 @@
 # Configuration options for your blog - customise to taste
 # This file contains no secret information, so can be stored in source control (unlike database.yml)
 title: HifiBuys
-url:   http://www.hifibuyse.com.au
+url:   http://www.hifibuys.com.au
 author: 
   name:    Hifibuys        # For copyright notice and ATOM feeds
   email:   admin@hifibuys.com.au # Exception emails will go here, and it is used in ATOM feeds
