--- a/config/harvester/electronics/hifi/tivoli.yml
+++ b/config/harvester/electronics/hifi/tivoli.yml
@@ -15,7 +15,7 @@ production:
     url:
     - http://tivolihifi.com/store/second-hand-equipment
     - http://tivolihifi.com/store/second-hand-equipment?q=second-hand-equipment&sort=20a&page=2
-    notify: twitter
+    notify: none
     container:
       object: Item
       defaults:
