--- a/config/harvester/electronics/hifi/shops.yml
+++ b/config/harvester/electronics/hifi/shops.yml
@@ -7,9 +7,9 @@ shop_1:
   updated_at: Sun Sep 12 21:40:39 UTC 2010
   suburb: Hawthorn East
   id: 208
-  ingestor: TivoliIngestor
+  ingestor: Tivoli
   state: VIC
-  feed: test/siteref/tivoli.html
+  feed: spec/integration/siteref/tivoli.html
   #feed: http://tivolihifi.com/store/second-hand-equipment
 
 shop_2:
@@ -21,9 +21,9 @@ shop_2:
   updated_at: Sun Sep 12 21:40:39 UTC 2010
   suburb: Carlton
   id: 209
-  ingestor: CarltonIngestor
+  ingestor: Carlton
   state: Victoria
-  feed: test/siteref/carlton.html
+  feed: spec/integration/siteref/carlton.html
   #feed: http://www.carltonaudiovisual.com.au/?q=node/view/7
 
 shop_3:
@@ -35,7 +35,7 @@ shop_3:
   updated_at: Sun Sep 12 21:40:40 UTC 2010
   suburb: Leichhardt
   id: 210
-  ingestor: AudioConnectionIngestor
+  ingestor: AudioConnection
   state: NSW
-  feed: test/siteref/audioconnection.html
+  feed: spec/integration/siteref/audioconnection.html
   #feed: http://audioconnection.com.au/trade-ins-clearance-audio-equipment.asp
