--- a/config/database.yml
+++ b/config/database.yml
@@ -1,32 +1,23 @@
 development:
-  adapter: postgresql
-  encoding: utf8
-  reconnect: false
-  database: hifibuys_development
+  #adapter: postgresql
+  #encoding: utf8
+  #reconnect: false
+  #database: hifibuys_development
+  #pool: 5
+  #username: postgres
+  #password: postgres 
+  #host: localhost
+
+  adapter: sqlite3
+  database: db/development.sqlite3
   pool: 5
-  username: postgres
-  password: postgres
-  host: localhost
+  timeout: 5000
 
 test: &TEST
-  adapter: postgresql
-  encoding: utf8
-  reconnect: false
-  database: hifibuys_test
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
-  username: postgres
-  password: postgres
-  host: localhost
-
-staging:
-  adapter: postgresql
-  encoding: utf8
-  reconnect: false
-  database: hifibuys_staging
-  pool: 5
-  username: postgres
-  password: postgres 
-  host: localhost
+  timeout: 5000
 
 production:
   adapter: postgresql
