--- a/config/database.yml
+++ b/config/database.yml
@@ -13,10 +13,13 @@ test: &TEST
   encoding: utf8
   reconnect: false
   database: hifibuys_test
-  pool: 5
   username: postgres
   password: postgres 
   host: localhost
+  #adapter: nulldb
+#  adapter: sqlite3
+#  database: db/test.sqlite3
+#  pool: 5
 
 
 production:
