Upgrade rails, remove searchlogic, etc

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,24 +1,33 @@
 development:
-  #adapter: postgresql
-  #encoding: utf8
-  #reconnect: false
-  #database: hifibuys_development
-  #pool: 5
-  #username: postgres
-  #password: postgres 
-  #host: localhost
-
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  reconnect: false
+  database: hifibuys_development
   pool: 5
-  timeout: 5000
+  username: postgres
+  password: postgres 
+  host: localhost
+
+  #adapter: sqlite3
+  #database: db/development.sqlite3
+  #pool: 5
+  #timeout: 5000
 
 test: &TEST
   #adapter: nulldb
-  adapter: sqlite3
-  database: db/test.sqlite3
+  #adapter: sqlite3
+  #database: db/test.sqlite3
+  #pool: 5
+  #timeout: 5000
+  adapter: postgresql
+  encoding: utf8
+  reconnect: false
+  database: hifibuys_test
   pool: 5
-  timeout: 5000
+  username: postgres
+  password: postgres 
+  host: localhost
+
 
 production:
   adapter: postgresql
