Add prod config

--- a/config/config.yml
+++ b/config/config.yml
@@ -27,3 +27,6 @@ development: &DEVELOPMENT
           - "http://tivolihifi.com/catalogue/clearance?page=0"
 test:
   <<: *DEVELOPMENT
+
+production:
+  <<: *DEVELOPMENT
