--- a/db/base/login_accounts.yml
+++ b/db/base/login_accounts.yml
@@ -1,7 +1,7 @@
 
---- 
-login_accounts: 
-  columns: 
+---
+login_accounts:
+  columns:
   - id
   - type
   - user_id
@@ -12,21 +12,85 @@ login_accounts:
   - created_at
   - updated_at
   records: 
-  - - "1"
+---
+  - - '1'
     - Omnisocial::TwitterAccount
-    - "1"
-    - "91552288"
+    - '1'
+    - '91552288'
     - Hifi Buys
     - twifibuys
     - http://s.twimg.com/a/1290538325/images/default_profile_2_normal.png
-    - 2010-11-25 10:00:14.169057
-    - 2010-11-25 10:00:14.395211
-  - - "2"
+    - '2010-11-25 10:00:14.169057'
+    - '2010-11-25 10:00:14.395211'
+  - - '2'
     - Omnisocial::TwitterAccount
-    - "2"
-    - "792230"
-    - R0b Sh4rp
+    - '2'
+    - '792230'
+    - Rob
     - quannum
-    - http://a3.twimg.com/profile_images/578432007/twitterProfilePhoto_normal.jpg
-    - 2010-11-25 12:27:13.877668
-    - 2010-11-25 12:27:14.013323
+    - http://a2.twimg.com/profile_images/1193183031/rob_normal.jpg
+    - '2010-11-25 12:27:13.877668'
+    - '2011-01-26 04:56:54.761372'
+  - - '3'
+    - IngestorAccount
+    - '6'
+    - 
+    - Audio Connection
+    - audioconnection
+    - 
+    - '2010-11-30 22:18:06.774678'
+    - '2010-11-30 22:18:06.774678'
+  - - '4'
+    - IngestorAccount
+    - '7'
+    - 
+    - Audio Solutions
+    - audiosolutions
+    - 
+    - '2010-11-30 22:18:27.465493'
+    - '2010-11-30 22:18:27.465493'
+  - - '6'
+    - IngestorAccount
+    - '8'
+    - 
+    - Carlton Audio Visual
+    - carltonaudiovisual
+    - 
+    - '2010-11-30 22:18:51.364385'
+    - '2010-11-30 22:18:51.364385'
+  - - '7'
+    - IngestorAccount
+    - '11'
+    - 
+    - Tivoli HiFi
+    - tivolihifi
+    - 
+    - '2010-11-30 22:19:45.233284'
+    - '2010-11-30 22:19:45.233284'
+  - - '8'
+    - IngestorAccount
+    - '10'
+    - 
+    - Simply HiFi
+    - simplyhifi
+    - 
+    - '2010-11-30 22:19:45.233284'
+    - '2010-11-30 22:19:45.233284'
+  - - '9'
+    - Omnisocial::FacebookAccount
+    - '12'
+    - '549051814'
+    - Rob Sharp
+    - sharpr
+    - 
+    - '2010-12-20 11:27:19.146137'
+    - '2010-12-20 11:27:19.298065'
+  - - '10'
+    - IngestorAccount
+    - '9'
+    - 
+    - Pymble Hifi
+    - pymble
+    - 
+    - '2011-03-11 10:59:11.626934'
+    - '2011-03-11 10:59:11.626934'
