--- a/db/base/users.yml
+++ b/db/base/users.yml
@@ -1,33 +1,94 @@
 
---- 
-users: 
-  columns: 
+---
+users:
+  columns:
   - id
   - remember_token
   - created_at
   - updated_at
-  - name
   - address
   - suburb
   - city
   - state
   - country
   records: 
-  - - "1"
+---
+  - - '1'
     - $2a$10$fQgp9IDwKfL7RmOwtPIG0O3gyTexea9sunYbzmitkj8K/sySHzsge
-    - 2010-11-25 10:00:14.369784
-    - 2010-11-25 10:00:14.825573
+    - '2010-11-25 10:00:14.369784'
+    - '2010-11-25 10:00:14.825573'
     - 
     - 
     - 
     - 
     - 
+  - - '2'
+    - $2a$10$RcGCI6d4ybcWBhkP34hqYuB5tEZKHcPn.eQxI4y6S54e7B8KqXuKS
+    - '2010-11-25 12:27:13.975422'
+    - '2011-01-26 04:56:54.896221'
     - 
-  - - "2"
-    - $2a$10$dXBbPATjpF4TUP1z73SE7eEBW0OV/nY4WRSDsmuoyf9hONO1ld/Y.
-    - 2010-11-25 12:27:13.975422
-    - 2010-11-25 12:27:14.309666
     - 
+    - 
+    - 
+    - 
+  - - '6'
+    - 
+    - '2010-11-29 05:29:06.10749'
+    - '2010-11-29 05:29:06.10749'
+    - 137 Victoria Road
+    - Drummoyne
+    - Sydney
+    - NSW
+    - AU
+  - - '7'
+    - 
+    - '2010-11-29 05:33:44.509953'
+    - '2010-11-29 05:33:44.509953'
+    - 1195 Botany Road
+    - Mascot
+    - Sydney
+    - NSW
+    - AU
+  - - '8'
+    - 
+    - '2010-11-29 05:35:12.919883'
+    - '2010-11-29 05:35:12.919883'
+    - 164-172 Lygone Street
+    - Carlton
+    - Melbourne
+    - VIC
+    - AU
+  - - '9'
+    - 
+    - '2010-11-29 05:36:31.205574'
+    - '2010-11-29 05:36:31.205574'
+    - 69 Grandview Street
+    - ''
+    - Pymble
+    - NSW
+    - AU
+  - - '10'
+    - 
+    - '2010-11-29 05:37:31.399118'
+    - '2010-11-29 05:37:31.399118'
+    - 319 Hay Street
+    - Subiaco
+    - Perth
+    - WA
+    - AU
+  - - '11'
+    - 
+    - '2010-11-29 05:38:36.507596'
+    - '2010-11-29 05:38:36.507596'
+    - 155-157 Camberwell Road
+    - Hawthorn East
+    - Melbourne
+    - VIC
+    - AU
+  - - '12'
+    - $2a$10$Cu81tgkN/XvzBPaMvH4NpOX.BlxYaJRDPrU6RqqMoA614knQs9W6.
+    - '2010-12-20 11:27:19.290137'
+    - '2010-12-20 11:27:19.385883'
     - 
     - 
     - 
